@@ -52,7 +52,7 @@ private:
 
     bool M_forward;
     bool M_live_mode;
-    bool M_first_cache;
+    bool M_full_recover_mode;
     bool M_need_caching;
 
     // not used
@@ -67,7 +67,8 @@ public:
 
     void clear();
 
-    bool isLiveMode() const;
+    bool isLiveMode() const { return M_live_mode; }
+    bool isFullRecoverMode() const { return M_full_recover_mode; }
 
     void startTimer();
 
