@@ -1,3 +1,10 @@
+2009-12-01  Hidehisa Akiyama  <akky@users.sourceforge.jp>
+
+	* src/log_player.cpp:
+	* src/log_player.h:
+	* src/main_window.cpp:
+	- implemented a special buffer recovering mode.
+
 2009-11-17  Hidehisa Akiyama  <akky@users.sourceforge.jp>
 
 	* configure.ac:
